--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -227,3 +227,35 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (min-width: 1024px) {
+    .navbar {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .bars {
+        display: none;
+    }
+
+    .hamburger_ul {
+        display: flex;
+        flex-direction: row;
+        background: none;
+        text-wrap: nowrap;
+    }
+
+    .hamburger_li {
+        padding-right: 50px;
+    }
+
+    .question_form{
+        text-align: center;
+    }
+
+    label,
+    input,
+    #question {
+        width: 500px;
+    }
+}
