--- a/public/assets/css/folije.css
+++ b/public/assets/css/folije.css
@@ -255,3 +255,25 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (min-width: 1024px) {
+    .navbar {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .bars {
+        display: none;
+    }
+
+    .hamburger_ul {
+        display: flex;
+        flex-direction: row;
+        background: none;
+        text-wrap: nowrap;
+    }
+
+    .hamburger_li {
+        padding-right: 50px;
+    }
+}
